# synthplayground

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindCatch2.cmake  Findminiaudio.cmake
src/: CMakeLists.txt  oscillator.cpp  oscillator.h  player.cpp  player.h
tests/: CMakeLists.txt  test_play_tone.cpp  tests.cpp
